--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
     "@floating-ui/react": "0.26.17",
+    "@mui/icons-material": "^5.16.0",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.20",
     "@mui/material-nextjs": "5.15.11",
@@ -27,6 +28,7 @@
     "react-colorful": "5.6.1",
     "react-dom": "18.3.1",
     "react-perfect-scrollbar": "1.5.8",
+    "react-toastify": "^10.0.5",
     "react-use": "17.5.0",
     "server-only": "0.0.1"
   },
